@@ -29,6 +29,8 @@ Open a connection for indexing:
 >>> iconn.add_field_action('price', FieldActions.SORTABLE, type='float')
 >>> iconn.add_field_action('price', FieldActions.COLLAPSE)
 >>> iconn.add_field_action('price', FieldActions.FACET, type='float')
+>>> iconn.add_field_action('price3', FieldActions.SORTABLE, type='float')
+>>> iconn.add_field_action('price3', FieldActions.FACET, type='float')
 
 >>> iconn.add_field_action('facet1', FieldActions.FACET)
 >>> iconn.add_field_action('facet2', FieldActions.FACET)
@@ -69,6 +71,7 @@ Add a set of documents, which dates and prices, to test sorting:
 ...     doc.fields.append(Field('text', 'More test text about this document.'))
 ...     doc.fields.append(Field('date', '2007%02d%02d' % (i % 12 + 1, i // 12 + 1)))
 ...     doc.fields.append(Field('price', '%f' % ((float(i) / 7) % 10)))
+...     doc.fields.append(Field('price3', '%f' % ((float(i) * 6.7))))
 ...     doc.fields.append(Field('facet1', '%d' % (i // 40)))
 ...     doc.fields.append(Field('facet2', '%d' % (i // 20)))
 ...     doc.fields.append(Field('facet3', '%d' % (i // 12)))
@@ -186,16 +189,16 @@ Now, parse a simple query.
 
 
 Get a list of the facets and tags relevant for the search
->>> results2 = sconn.search(q, 0, 30, sortby="-date", gettags=('tag'),
-...                         getfacets=True)
+>>> results2 = sconn.search(sconn.query_all(), 0, 30, checkatleast=200,
+...                         sortby="-date", gettags=('tag'), getfacets=True)
 >>> [int(result.id, 16) for result in results2]
 [191, 179, 167, 155, 143, 131, 119, 107, 95, 83, 71, 59, 47, 35, 23, 11, 190, 178, 166, 154, 142, 130, 118, 106, 94, 82, 70, 58, 46, 34]
 >>> results2.get_top_tags('tag', 8)
 [('1', 32), ('2', 31), ('0', 30), ('3', 30), ('4', 30), ('5', 16), ('8', 16), ('7', 14)]
 >>> [(facet[0], len(facet[1])) for facet in results2.get_suggested_facets(maxfacets=10)]
-[('facet1', 5), ('facet2', 10), ('facet3', 16), ('category', 20), ('facet4', 20), ('facet5', 29), ('price', 66)]
->>> [(facet[0], facet[1]) for facet in results2.get_suggested_facets(maxfacets=10)]
->>> [(facet[0], facet[1]) for facet in results2.get_suggested_facets(maxfacets=10)]
+[('price3', 7), ('facet1', 5), ('facet4', 5), ('facet2', 10), ('price', 4), ('facet3', 16), ('category', 20), ('facet5', 29)]
+>>> [(facet[0], facet[1]) for facet in results2.get_suggested_facets(maxfacets=5)]
+[('price3', [((0.0, 194.30000000000001), 30), ((201.0, 395.30000000000001), 24), ((442.19999999999999, 556.10000000000002), 11), ((609.70000000000005, 797.29999999999995), 13), ((864.29999999999995, 958.10000000000002), 6), ((1025.0999999999999, 1199.3), 9), ((1273.0, 1279.7), 2)]), ('facet1', [('0', 38), ('1', 23), ('2', 17), ('3', 9), ('4', 8)]), ('facet4', [((0.0, 4.0), 38), ((5.0, 9.0), 23), ((10.0, 14.0), 17), ((16.0, 19.0), 9), ((20.0, 23.0), 8)]), ('facet2', [('0', 20), ('1', 18), ('2', 16), ('3', 7), ('4', 9), ('5', 8), ('6', 3), ('7', 6), ('8', 6), ('9', 2)]), ('price', [((0.0, 2.4285709999999998), 31), ((2.5714290000000002, 4.8571429999999998), 26), ((5.0, 7.4285709999999998), 24), ((7.5714290000000002, 9.8571430000000007), 14)])]
 
 
 We can also filter the results by a range of the sortable values - for
